modules/gui/qt/util/customwidgets.cpp
@@ -31,6 +31,7 @@
 #include "customwidgets.hpp"
 #include "qt.hpp"               /* needed for qtr,  but not necessary */
 
+#include <QtMath>  // for wheel deadzone calculation
 #include <QPainter>
 #include <QRect>
 #include <QKeyEvent>
@@ -297,13 +298,28 @@ int qtEventToVLCKey( QKeyEvent *e )
 
 int qtWheelEventToVLCKey( QWheelEvent *e )
 {
-    int i_vlck = 0;
-    /* Handle modifiers */
-    i_vlck |= qtKeyModifiersToVLC( e );
-    if ( e->delta() > 0 )
-        i_vlck |= KEY_MOUSEWHEELUP;
-    else
-        i_vlck |= KEY_MOUSEWHEELDOWN;
+    const qreal v_cos_deadzone = 0.45; // ~63 degrees
+    const qreal h_cos_deadzone = 0.95; // ~15 degrees
+
+    int i_vlck = qtKeyModifiersToVLC(e);  // Handle modifiers
+
+    QPoint p = e->angleDelta();
+    if (!p.isNull())
+    {
+        qreal cos = qFabs(p.x())/qSqrt(qPow(p.x(), 2) + qPow(p.y(), 2));
+
+        if (cos < v_cos_deadzone)
+        {
+            if (p.y() > 0) i_vlck |= KEY_MOUSEWHEELUP;
+            else           i_vlck |= KEY_MOUSEWHEELDOWN;
+        }
+        else if (cos > h_cos_deadzone)
+        {
+            if (p.x() > 0) i_vlck |= KEY_MOUSEWHEELLEFT;
+            else           i_vlck |= KEY_MOUSEWHEELRIGHT;
+        }
+    }
+
     return i_vlck;
 }
 
